# uv-task-runner

./: .gitignore  README.md  plugin_config.toml  pyproject.toml  task_runner.toml
.github/workflows/: publish.yaml
examples/: script_a.py  script_b.py
plugins/: plugin_a.py  plugin_c.py
scripts/: script_a.py
src/uv_plugin_architecture/: __init__.py  __main__.py
src/uv_task_runner/: __init__.py  __main__.py  errors.py  pipeline.py  settings.py  task.py  template_config.toml  utils.py
tests/: test_main.py
