[project]
name = "uv-plugin-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
